--- a/juve сайт 2/index.html
+++ b/juve сайт 2/index.html
@@ -104,14 +104,14 @@ Gomel. Vladimirova 15 kv. 29<br />
 <h4 class="module-header-bar">   latest enteries from the blog</h4>
 <div class="blog-entry">
 <h5><a href="#blogentry1" title="Vivamus sed risus"></a></h5>
-<p class="meta">By jonathan Davidson - 05/ 08/ 09</p>
+<p class="meta">05/ 08/ 09</p>
 <blockquote class="content">
 <p>(=</p>
 </blockquote>
 </div>
 <div class="blog-entry">
 <h5><a href="#blogentry3" title="Vivamus sed risus"></a></h5>
-<p class="meta">By jonathan Davidson - 05/ 01/ 09</p>
+<p class="meta">05/ 01/ 09</p>
 <blockquote class="content">
 <p>(=</p>
 </blockquote>
